# PolynomialAlgebra

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/Language/: CMakeLists.txt  Interpreter.cpp  Lexer.cpp  Parser.cpp  functions.cpp  nodes.cpp  polynodes.cpp  types.cpp
app/Language/include/: Interpreter.hpp  Lexer.hpp  Parser.hpp  Type.hpp  functions.hpp  nodes.hpp  polynodes.hpp
app/Parser/: CMakeLists.txt  Parser.cpp
app/Parser/include/: Parser.hpp
src/: CMakeLists.txt
src/Numbers/: CMakeLists.txt  Integer.cpp  Modular.cpp  ModularError.cpp  Rational.cpp
src/Numbers/example/: CMakeLists.txt  integers.cpp  modulars.cpp  rationals.cpp
src/Numbers/include/: Integer.hpp  Modular.hpp  ModularError.hpp  Rational.hpp
src/Polynomials/: CMakeLists.txt
src/Polynomials/example/: CMakeLists.txt  polynomials.cpp
src/Polynomials/include/: Polynomial.hpp
